--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="shortcut icon" href="./images/favicon/SVG/favicon.svg">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -243,8 +243,8 @@
       </ul>
       <div class="content"></div>
     </section>
-     <!-- 寵物認養區塊結束-->
-     <!-- 下一站，家區塊開始 -->
+    <!-- 寵物認養區塊結束-->
+    <!-- 下一站，家區塊開始 -->
     <section id="story">
       <h1>下一站，家</h1>
       <div class="swiper mySwiper">
@@ -261,11 +261,14 @@
         </div>
       </div>
     </section>
-      <!-- 下一站，家區塊結束 -->
+    <!-- 下一站，家區塊結束 -->
   </main>
   <!-- footer開始 -->
   <footer>
     <div class="business-hours">
+      <div class="title">
+        <h2>營業時間</h2>
+      </div>
       <div class="row">
         <div class="column">
           <span>週一</span>
@@ -275,16 +278,58 @@
           <span>週二</span>
           <span>休息</span>
         </div>
+        <div class="column">
+          <span>週三</span>
+          <span>12:00 ~ 15:00</span>
+          <span>17:00 ~ 21:00</span>
+        </div>
+        <div class="column">
+          <span>週四</span>
+          <span>12:00 ~ 15:00</span>
+          <span>17:00 ~ 21:00</span>
+        </div>
+        <div class="column">
+          <span>週五</span>
+          <span>12:00 ~ 15:00</span>
+          <span>17:00 ~ 21:00</span>
+        </div>
+        <div class="column">
+          <span>週六</span>
+          <span>12:00 ~ 15:00</span>
+          <span>17:00 ~ 21:00</span>
+        </div>
+        <div class="column">
+          <span>週日</span>
+          <span>12:00 ~ 15:00</span>
+          <span>17:00 ~ 21:00</span>
+        </div>
       </div>
     </div>
-    <div class="contact-details">
-      <h2>地址</h2>
-      <p>臺中市北區興進路58號</p>
-      <h2>地址</h2>
-      <p>臺中市北區興進路58號</p>
-      <h2>地址</h2>
-      <p>臺中市北區興進路58號</p>
+
+    <div class="line">
+      <hr />
     </div>
+
+    <div class="contact-details">
+      <div class="detail-1">
+        <h2>地址</h2>
+        <p>臺中市北區興進路58號</p>
+      </div>
+      <div class="detail-2">
+        <h2>電話</h2>
+        <p>04-2233-7229</p>
+      </div>
+      <div class="detail-3">
+        <h2>信箱</h2>
+        <p>kate0523523@gmail.com</p>
+      </div>
+      <div></div>
+    </div>
+
+    <div class="line">
+      <hr />
+    </div>
+
     <div class="related-groups">
       <h2>相關公益團體</h2>
     </div>
@@ -293,8 +338,8 @@
     </div>
 
   </footer>
- <!-- footer結束 -->
-<!-- javascript 區塊 -->
+  <!-- footer結束 -->
+  <!-- javascript 區塊 -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
