--- a/index.html
+++ b/index.html
@@ -267,41 +267,56 @@
   <footer>
     <div class="business-hours">
       <div class="title">
-        <h2>營業時間</h2>
+        <h1>營業時間</h1>
       </div>
       <div class="row">
         <div class="column">
-          <span>週一</span>
-          <span>休息</span>
+          <h2>週一</h2>
+          <div class="line-break"></div>
+          <h2>休息</h2>
+        </div>
+
+        <div class="column">
+          <h2>週二</h2>
+          <div class="line-break"></div>
+          <h2>休息</h2>
+        </div>
+
+        <div class="column">
+          <h2>週三</h2>
+          <div class="line-break"></div>
+          <h2>12:00 ~ 15:00</h2>
+          <div class="line-break"></div>
+          <h2>17:00 ~ 21:00</h2>
+        </div>
+
+        <div class="column">
+          <h2>週四</h2>
+          <div class="line-break"></div>
+          <h2>12:00 ~ 15:00</h2>
+          <div class="line-break"></div>
+          <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <span>週二</span>
-          <span>休息</span>
+          <h2>週五</h2>
+          <div class="line-break"></div>
+          <h2>12:00 ~ 15:00</h2>
+          <div class="line-break"></div>
+          <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <span>週三</span>
-          <span>12:00 ~ 15:00</span>
-          <span>17:00 ~ 21:00</span>
+          <h2>週六</h2>
+          <div class="line-break"></div>
+          <h2>12:00 ~ 15:00</h2>
+          <div class="line-break"></div>
+          <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <span>週四</span>
-          <span>12:00 ~ 15:00</span>
-          <span>17:00 ~ 21:00</span>
-        </div>
-        <div class="column">
-          <span>週五</span>
-          <span>12:00 ~ 15:00</span>
-          <span>17:00 ~ 21:00</span>
-        </div>
-        <div class="column">
-          <span>週六</span>
-          <span>12:00 ~ 15:00</span>
-          <span>17:00 ~ 21:00</span>
-        </div>
-        <div class="column">
-          <span>週日</span>
-          <span>12:00 ~ 15:00</span>
-          <span>17:00 ~ 21:00</span>
+          <h2>週日</h2>
+          <div class="line-break"></div>
+          <h2>12:00 ~ 15:00</h2>
+          <div class="line-break"></div>
+          <h2>17:00 ~ 21:00</h2>
         </div>
       </div>
     </div>
@@ -312,16 +327,16 @@
 
     <div class="contact-details">
       <div class="detail-1">
-        <h2>地址</h2>
-        <p>臺中市北區興進路58號</p>
+        <h1>地址</h1>
+        <h2>臺中市北區興進路58號</h2>
       </div>
       <div class="detail-2">
-        <h2>電話</h2>
-        <p>04-2233-7229</p>
+        <h1>電話</h1>
+        <h2>04-2233-7229</h2>
       </div>
       <div class="detail-3">
-        <h2>信箱</h2>
-        <p>kate0523523@gmail.com</p>
+        <h1>信箱</h1>
+        <h2>kate0523523@gmail.com</h2>
       </div>
       <div></div>
     </div>
