--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button><i class="bi bi-x close-btn"></i></button>
     </div>
   </div>
-  <!--  -->
+  <!--這個頁面會覆蓋掉整個body  -->
 
   <main>
     <!-- banner開始 -->
@@ -137,18 +137,24 @@
           <div class="food-img">
             <!-- 卡片前面內容物 -->
             <div class="front">
-              <img class="front-img" src="./images/好食餐點/beef.jpg" alt="">
+              <div class="front-img front-img1">
+                <span class="cover">本店使用牛肉來源</span>
+              </div>
             </div>
             <!-- 卡片後面內容物 -->
             <div class="back">
-              <span>雞肉豬肉牛肉好吃</span>
+              <img src="./images/好食餐點/icon-beef-01.png" alt="">
+              <h2>採用澳洲牛肉</好>
+              <p>天然健康兼具紥實美味的口感</p>
             </div>
           </div>
         </div>
         <div class="column">
           <div class="food-img">
             <div class="front">
-              <img class="front-img" src="./images/好食餐點/pork.jpg" alt="">
+              <div class="front-img front-img2">
+                <span>本店使用豬肉來源</span>
+              </div>
             </div>
             <div class="back">
               <span>雞肉豬肉牛肉好吃</span>
@@ -158,7 +164,9 @@
         <div class="column">
           <div class="food-img">
             <div class="front">
-              <img class="front-img" src="./images/好食餐點/cook.jpg" alt="">
+              <div class="front-img front-img3">
+                <span>本店使用食材料理</span>
+              </div>
             </div>
             <div class="back">
               <span>雞肉豬肉牛肉好吃</span>
@@ -171,7 +179,9 @@
         <div class="column">
           <div class="food-img">
             <div class="front">
-              <img class="front-img" src="./images/好食餐點/fruit tea.jpg" alt="">
+              <div class="front-img front-img4">
+                <span>熱銷禮盒 手作水果茶</span>
+              </div>
             </div>
             <div class="back">
               <span>雞肉豬肉牛肉好吃</span>
@@ -181,7 +191,9 @@
         <div class="column">
           <div class="food-img">
             <div class="front">
-              <img class="front-img" src="./images/example/example.jpg" alt="">
+              <div class="front-img front-img5">
+                <span>齊心抗疫 外帶餐點</span>
+              </div>
             </div>
             <div class="back">
               <span>雞肉豬肉牛肉好吃</span>
@@ -191,7 +203,9 @@
         <div class="column">
           <div class="food-img">
             <div class="front">
-              <img class="front-img" src="./images/example/example.jpg" alt="">
+              <div class="front-img front-img6">
+                <span>毛孩最愛 點心食品</span>
+              </div>
             </div>
             <div class="back">
               <span>雞肉豬肉牛肉好吃</span>
