--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="shortcut icon" href="favicon.svg">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./style.css">
+  <title>Homecafe</title>
 </head>
 
 <body>
@@ -145,7 +145,7 @@
             <div class="back">
               <img src="./images/好食餐點/icon-beef-01.png" alt="">
               <h2>採用澳洲牛肉</好>
-              <p>天然健康兼具紥實美味的口感</p>
+                <p>天然健康兼具紥實美味的口感</p>
             </div>
           </div>
         </div>
