好食餐點完成

--- a/index.html
+++ b/index.html
@@ -138,13 +138,16 @@
             <!-- 卡片前面內容物 -->
             <div class="front">
               <div class="front-img front-img1">
-                <span class="cover">本店使用牛肉來源</span>
+                <div class="cover">
+                  <span>本店使用</span>
+                  <span>牛肉來源</span>
+                </div>
               </div>
             </div>
             <!-- 卡片後面內容物 -->
             <div class="back">
               <img src="./images/好食餐點/icon-beef-01.png" alt="">
-              <h2>採用澳洲牛肉</好>
+              <h2>採用澳洲牛肉</h2>
                 <p>天然健康兼具紥實美味的口感</p>
             </div>
           </div>
@@ -153,11 +156,16 @@
           <div class="food-img">
             <div class="front">
               <div class="front-img front-img2">
-                <span>本店使用豬肉來源</span>
+                <div class="cover">
+                  <span>本店使用</span>
+                  <span>豬肉來源</span>
+                </div>
               </div>
             </div>
             <div class="back">
-              <span>雞肉豬肉牛肉好吃</span>
+              <img src="./images/好食餐點/icon-pork-01.png" alt="">
+              <h2>採用台灣豬肉</h2>
+              <p>支持口感彈牙的國產台灣豬</p>
             </div>
           </div>
         </div>
@@ -165,11 +173,16 @@
           <div class="food-img">
             <div class="front">
               <div class="front-img front-img3">
-                <span>本店使用食材料理</span>
+                <div class="cover">
+                  <span>本店使用</span>
+                  <span>食材料理</span>
+                </div>
               </div>
             </div>
             <div class="back">
-              <span>雞肉豬肉牛肉好吃</span>
+              <img src="./images/好食餐點/icon-cook-01.png" alt="">
+              <h2>絕不使用料理包</h2>
+              <p>使用天然食材和高湯等親自燉煮</p>
             </div>
           </div>
         </div>
@@ -180,11 +193,16 @@
           <div class="food-img">
             <div class="front">
               <div class="front-img front-img4">
-                <span>熱銷禮盒 手作水果茶</span>
+                <div class="cover">
+                  <span>熱銷禮盒</span>
+                  <span>手作水果茶</span>
+                </div>
               </div>
             </div>
             <div class="back">
-              <span>雞肉豬肉牛肉好吃</span>
+              <img src="./images/好食餐點/icon-fruit tea-01.png" alt="">
+              <h2>新鮮水果手作茶</h2>
+              <p>含有新鮮果粒的手工熬煮果醬茶</p>
             </div>
           </div>
         </div>
@@ -192,11 +210,16 @@
           <div class="food-img">
             <div class="front">
               <div class="front-img front-img5">
-                <span>齊心抗疫 外帶餐點</span>
+                <div class="cover">
+                  <span>齊心抗疫</span>
+                  <span>外帶餐點</span>
+                </div>
               </div>
             </div>
             <div class="back">
-              <span>雞肉豬肉牛肉好吃</span>
+              <img src="./images/好食餐點/icon-mask-01.png" alt="">
+              <h2>防疫外帶餐點</h2>
+              <p>衛生安全但分量不減少的Lite餐盒</p>
             </div>
           </div>
         </div>
@@ -204,11 +227,16 @@
           <div class="food-img">
             <div class="front">
               <div class="front-img front-img6">
-                <span>毛孩最愛 點心食品</span>
+                <div class="cover">
+                  <span>毛孩最愛</span>
+                  <span>點心食品</span>
+                </div>
               </div>
             </div>
             <div class="back">
-              <span>雞肉豬肉牛肉好吃</span>
+              <img src="./images/好食餐點/icon-petfood-01.png" alt="">
+              <h2>毛孩最愛點心</h2>
+              <p>採低溫烘烤保存新鮮營養的美味</p>
             </div>
           </div>
         </div>
