food_card_completed

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="back">
               <img src="./images/好食餐點/icon-beef-01.png" alt="">
               <h2>採用澳洲牛肉</h2>
-                <p>天然健康兼具紥實美味的口感</p>
+              <p>天然健康兼具紥實美味的口感</p>
             </div>
           </div>
         </div>
@@ -249,59 +249,27 @@
         <h1>幸福菜單</h1>
         <!--菜單導航-->
         <ul class="menu-items">
-          <li class="menu-item">
-            <a class="menu-link" href="">御品鍋物</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">意大利麵</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">主廚料理</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">午茶點心</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">好食飲品</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">寵物鮮食</a>
-          </li>
+          <li class="menu-item item1">意大利麵</li>
+          <li class="menu-item item2">暖心鍋物</li>
+          <li class="menu-item item3">主廚料理</li>
+          <li class="menu-item item4">活力輕食</li>
+          <li class="menu-item item5">好食點心</li>
+          <li class="menu-item item6">好食飲品</li>
+          <li class="menu-item item7">寵物鮮食</li>
         </ul>
       </div>
       <!-- 每個分類的詳細菜單 -->
-      <div class="pet-food">
-        <div class="pet-food-intro">
-          <h2>寵物鮮食</h2>
-          <!-- 毛孩A餐 -->
-          <div class="row">
-            <div class="column">
-              <h3>毛孩A餐</h3>
-              <div class="content">特製寵物鮮食，搭配南瓜泥</div>
-            </div>
-            <div class="column">
-              <div class="price">$99</div>
-            </div>
+
+      <!-- 寵物鮮食 -->
+      <div class="meal pet-food">
+        <div class="meal-intro">
+          <div class="meal-title">
+            <img src="./images/幸福菜單/icons/foot-print.svg" alt="">
+            <h2>寵物鮮食</h2>
           </div>
-          <!-- 毛孩B餐 -->
-          <div class="row">
-            <div class="column">
-              <h3>毛孩A餐</h3>
-              <div class="content">特製寵物鮮食，搭配南瓜泥</div>
-            </div>
-            <div class="column">
-              <div class="price">$99</div>
-            </div>
-          </div>
-          <!-- 毛孩C餐 -->
-          <div class="row">
-            <div class="column">
-              <h3>毛孩A餐</h3>
-              <div class="content">特製寵物鮮食，搭配南瓜泥</div>
-            </div>
-            <div class="column">
-              <div class="price">$99</div>
-            </div>
+          <div class="meal-content">
+            <h3>毛孩A餐</h3>
+            <span>$99</span>
           </div>
         </div>
         <div class="food-pic">
